objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <formula>Contact_Name__r.FirstName &amp; &quot; &quot; &amp;  Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copmany_Name__c</fullName>
        <label>Copmany Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPCL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_ID__c</fullName>
        <label>Plant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Ship_to_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Ship to Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Literature</fullName>
        <active>true</active>
        <label>Literature</label>
    </recordTypes>
    <recordTypes>
        <fullName>No_Change</fullName>
        <active>true</active>
        <label>No Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>